# molgenis-py-cohorts-etl

./: .env_example  .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  TableMappings.gql  catalogueClient.py  client.py  cohorts.gql  collectionEvents.gql  constants.py  contacts.gql  contributions.gql  job.py  jobDataCatalogue.py  jobFillStaging.py  jobUMCG.py  partners.gql  publications.gql  requirements.txt  run.py  runDataCatalogue.py  runFillStaging.py  setup.cfg  setup.py  staging-model-umcg.csv  staging-model.csv  strategy.py  subcohorts.gql  sync.py  util.py
datamodels/: cohort-model.csv  network-model.csv  set-up-staging.md  shared-staging-model.csv  staging-model-umcg.csv
datamodels/CatalogueOntologies/: source.txt
datamodels/DataCatalogue/: source.txt
datamodels/DataCatalogueSharedStaging/: source.txt
datamodels/DataCatalogueStagingCohort/: source.txt
datamodels/DataCatalogueStagingCohortUMCG/: source.txt
datamodels/DataCatalogueStagingNetwork/: source.txt
docs/: datamodels.md  jobs.md
graphql-queries/: Contacts.gql  Contributions.gql  DatasetMappings.gql  Documentation.gql  RepeatedSourceVariables.gql  RepeatedVariables.gql  SourceVariableValues.gql  SourceVariables.gql  SubcohortCounts.gql  VariableMappings.gql  VariableValues.gql  Variables.gql
migration/2-8_to_3-0/: job.py  migration.py  run.py  strategy.py
migration/docs/: diff2.8to3.0_no_spaces.xlsx
src/: __init__.py  client.py  constants.py  exceptions.py  job.py  ontology.py  sync.py  util.py
